# fwubbo

./: .env.example  .gitignore  CLAUDE.md  FWUBBO_PROJECT_STATE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
backend/: .env.example  main.py  requirements.txt  smoke_test.py
backend/core/: module_registry.py  sandbox.py  stats_db.py
backend/modules/days-remaining/: fetch.py  manifest.json
backend/modules/deadline-tracker/: manifest.json  widget.tsx
backend/modules/gmail-digest/: fetch.py  manifest.json  widget.tsx
backend/modules/job-board-tracker/: fetch.py  manifest.json  widget.tsx
backend/modules/market-regime-indicator/: manifest.json
backend/modules/ml-news-tracker/: widget.tsx
backend/modules/open-meteo-weather/: widget.tsx
backend/routes/: chat.py  generate.py  local.py  modules.py  saved.py  secrets.py  settings.py  theme_chat.py
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src/api/: client.ts
src/components/: ChatPanel.tsx  ConfirmDialog.tsx  DynamicWidget.tsx  ModuleGeneratorPanel.tsx  ModuleInfoPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  ThemeChatPanel.tsx  WidgetCard.tsx  WidgetContextMenu.tsx  WidgetGrid.tsx  WidgetSettingsPanel.tsx
src/stores/: dashboard.ts
src/tauri/: bridge.ts
src/themes/: ThemeProvider.tsx  backgrounds.tsx  definitions.ts  index.ts
src/widgets/: DemoClock.tsx  DemoQuote.tsx  DemoStatus.tsx
(+30 files in other folders)
